add route for creating an org
POST /api/v2/orgs

{
  "name": "orgName",
  "orgAdminKey": "matches org_admin_key env variable"
}
